# resumemakerAI

./: .dockerignore  .gitignore  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  resumemaker.ps1  resumemaker.sh
examples/: using_env_for_linkedin.md
input/: README.md  config.json  job_description.json  job_description.txt.example
src/resumemaker/: __init__.py  cli.py  main.py
src/resumemaker/crews/: __init__.py
src/resumemaker/crews/poem_crew/: __init__.py  candidate_profile.json  data_extraction_crew.py  data_extraction_output.py  resume_making_crew.py
src/resumemaker/crews/poem_crew/config/: data_extraction_agents.yaml  data_extraction_tasks.yaml  resume_creation_agents.yaml  resume_creation_tasks.yaml
src/resumemaker/tools/: __init__.py  custom_tool.py  githubanalyzer_tool.py  google_search_tool.py  image_processing_tool.py  job_keyword_extractor_tool.py  latex_generator_tool.py  linkedin_extractor_tool.py  mistral_pdf_upload_tool.py  opensource_rag_tool.py  pdfGenarator_tool.py  pdf_analyzer_tool.py  resume_analyzer_tool.py  template_manager_tool.py
src/resumemaker/utils/: __init__.py  api_check.py
