[project]
name = "resumemaker"
version = "0.1.0"
description = "resumemaker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
    "yagmail>=0.15.293,<0.16.0",
]

[project.scripts]
kickoff = "resumemaker.main:kickoff"
plot = "resumemaker.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
